fixed the interaction jumpiness due to the input being at the bottom and being unable to control keyboard focus, etc. a much cleaner UX

--- a/mobileapp/www/css/index.css
+++ b/mobileapp/www/css/index.css
@@ -430,8 +430,9 @@ input[type="password"]:focus {
     font-family: -apple-system-body, "Helvetica Neue", Roboto, Helvetica, Arial, sans-serif;
     padding: 0rem 0.3rem;
     font-weight: normal;
-    margin: 0rem 0.1rem;
-    font-size: 60%;
+    margin: 0rem 0.3rem;
+    font-size: 90%;
+    color: whitesmoke;
 }
 
 #login-status {
